5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1716_2504.log
== SUBMITION (2019-05-15 23:54:51) 
-- CODE:
virus = int(input())
leu = int(input())
perc1 = int(input())
percl = int(input())
c1 = perc1/100
c2 = perc2/100
dias = 0
while leu <= 2*virus:
	acr = virus * c1
	virus = virus + acr
	acr2 = leu * c2
	leu = leu + acr2
	dias += 1
print(dias)
	
-- EXECUTION TIME:
0.149286
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2504/main.py", line 6, in <module>
    c2 = perc2/100
NameError: name 'perc2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:54:53) 
-- CODE:
virus = int(input())
leu = int(input())
perc1 = int(input())
percl = int(input())
c1 = perc1/100
c2 = perc2/100
dias = 0
while leu <= 2*virus:
	acr = virus * c1
	virus = virus + acr
	acr2 = leu * c2
	leu = leu + acr2
	dias += 1
print(dias)
	
-- EXECUTION TIME:
0.23075
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2504/main.py", line 6, in <module>
    c2 = perc2/100
NameError: name 'perc2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:54:54) 
-- CODE:
virus = int(input())
leu = int(input())
perc1 = int(input())
percl = int(input())
c1 = perc1/100
c2 = perc2/100
dias = 0
while leu <= 2*virus:
	acr = virus * c1
	virus = virus + acr
	acr2 = leu * c2
	leu = leu + acr2
	dias += 1
print(dias)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    c2 = perc2/100
NameError: name 'perc2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:55:16) 
-- CODE:
virus = int(input())
leu = int(input())
perc1 = int(input())
perc2 = int(input())
c1 = perc1/100
c2 = perc2/100
dias = 0
while leu <= 2*virus:
	acr = virus * c1
	virus = virus + acr
	acr2 = leu * c2
	leu = leu + acr2
	dias += 1
print(dias)
	
-- EXECUTION TIME:
0.180533
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
